--- a/public/app/ranking/ranking.html
+++ b/public/app/ranking/ranking.html
@@ -1,32 +1,33 @@
-<div class="content">
-    <div class="row">
-        <div class="col-md-10">
-            <div class="ranking">
-                <div class="element">
-                    <table class="table table-striped">
-                        <tbody>
-                            <tr ng-repeat="rank in ranking" profile user="rank">
-                                <td class="position">{{ rank.position }}</td>
-                                <td class="img"><img class="profile-picture" ng-src="https://graph.facebook.com/{{rank.uid}}/picture"></td>
-                                <td class="name">
-                                    <a href>{{ rank.name }}</a>
-                                </td>
-                                <td class="points">{{ rank.points }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <loading></loading>
-                </div>
-            </div>
-            <div class="element ranking-pagination">
-                <button ng-click="setPage(page = pagePrev ? pagePrev : page)" class="btn btn-default btn-pagination btn-pagination-left icon-arrow-left"></button>
-                <div class="form-group">
-                    <input class="form-control" ng-model="page" type="text" ng-blur="setPage(page)">
-                </div>
-                <span class="text-pagination"> / {{ pageLast }}</span>
-                <button ng-click="setPage(page = pageNext ? pageNext : page)" class="btn btn-default btn-pagination btn-pagination-right icon-arrow-right"></button>
-            </div>
+<div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div element-content class="app-element__body">
+        <table class="app-element__table mdl-data-table mdl-js-data-table">
+            <tbody>
+                <tr ng-repeat="rank in ranking" profile user="rank">
+                    <td class="app-element__table-rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
+                    <td class="app-element__table-user mdl-data-table__cell--non-numeric">
+                        <img class="app-element__table-user__picture" ng-src="//graph.facebook.com/{{rank.uid}}/picture">
+                        <span class="app-element__table-user-name">{{ rank.name }}</span>
+                    </td>
+                    <td class="points">{{ rank.points }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div element-content class="app-element__body">
+        <button ng-click="setPage(page = pagePrev ? pagePrev : page)"
+                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+            <i class="material-icons">keyboard_arrow_left</i>
+        </button>
+         <div class="mui-input">
+            <input ng-model="page" type="text" ng-blur="setPage(page)">
         </div>
-        <div class="col-md-2" col-right></div>
+        <span> / {{ pageLast }}</span>
+        <button ng-click="setPage(page = pageNext ? pageNext : page)"
+                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+            <i class="material-icons">keyboard_arrow_right</i>
+        </button>
     </div>
 </div>
