--- a/public/index.html
+++ b/public/index.html
@@ -18,21 +18,21 @@
   </head>
   <body>
 
-    <div ng-class="{'hidden': !loading}" class="app-loading">
-        <div id="p2" class="app-loader mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+    <div ng-show="loading" class="app-loading">
+        <div class="app-loader mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
     </div>
     
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" ng-show="ready">
         <header class="app-header mdl-layout__header">
-            <div class="app-header-row mdl-layout__header-row">
+            <div class="app-header__row mdl-layout__header-row">
                 <span class="app-title mdl-layout-title">
-                    <img class="app-logo-image" src="images/app-logo.png">
+                    <img class="app-logo__image" src="images/app-logo.png">
                 </span>
                 <!-- Add spacer, to align navigation to the right in desktop -->
                 <div class="app-header-spacer mdl-layout-spacer"></div>
           
                 <!-- Navigation -->
-                <div class="app-navigation-container">
+                <div class="app-navigation__container">
                     <nav class="app-navigation mdl-navigation">
                         <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#/">
                             {{ 'home' | translate }}
@@ -45,8 +45,8 @@
                         </a>
                     </nav>
                 </div>
-                <span class="app-mobile-title mdl-layout-title">
-                    <img class="app-logo-image" src="images/app-logo.png">
+                <span class="app-mobile__title mdl-layout-title">
+                    <img class="app-logo__image" src="images/app-logo.png">
                 </span>
             </div>
         </header>
@@ -54,7 +54,7 @@
 
         <div class="app-drawer mdl-layout__drawer">
             <span class="mdl-layout-title">
-                <img class="app-logo-image" src="images/app-logo-white.png">
+                <img class="app-logo__image" src="images/app-logo-white.png">
             </span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="#/">
