--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <link href="css/material/material.min.css" rel="stylesheet">
         <link href="css/material/icon.css" rel="stylesheet" >
         <link href="css/icomoon/style.css" rel="stylesheet">
+        <link href="css/components.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link ng-if="user.lang == 'ar'" ng-href="css/style.ar.css" rel="stylesheet">
   </head>
