--- a/public/app/ranking/ranking.html
+++ b/public/app/ranking/ranking.html
@@ -12,26 +12,27 @@
                 </tr>
             </tbody>
         </table>
-    </div>
-</div>
-
-<div element
-     ng-show="pages" 
-     class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div element-content class="app-element__body">
-        <button ng-show="pages.prev"
-                ng-click="setPage(pages.prev)"
-                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
-            <i class="material-icons">keyboard_arrow_left</i>
-        </button>
-         <div class="mui-input">
-            <input ng-model="page" type="text" ng-blur="setPage(page)">
+        <div class="app-ranking__pagination">
+            <div class="app-ranking__pagination-content">
+                <form ng-submit="setPage(page)" 
+                      name="pagination"
+                      class="app-ranking__pagination-form">
+                    <div class="app-form__textfield app-ranking__pagination-textfield">
+                        <input ng-model="page" type="text" ng-blur="setPage(page)">
+                    </div>
+                    <span class="app-ranking__pagination-count"> / {{ pages.last }}</span>
+                </form>
+                <button ng-show="pages.prev"
+                    ng-click="setPage(pages.prev)"
+                    class="app-ranking__pagination-prev mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+                    <i class="material-icons">navigate_before</i>
+                </button>
+                <button ng-show="pages.next"
+                        ng-click="setPage(pages.next)"
+                        class="app-ranking__pagination-next mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+                    <i class="material-icons">navigate_next</i>
+                </button>
+            </div>
         </div>
-        <span> / {{ pages.last }}</span>
-        <button ng-show="pages.next"
-                ng-click="setPage(pages.next)"
-                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
-            <i class="material-icons">keyboard_arrow_right</i>
-        </button>
     </div>
 </div>
