--- a/public/app/trophies/trophies.html
+++ b/public/app/trophies/trophies.html
@@ -1,5 +1,20 @@
-<div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+<div element class="app-element app-trophies mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div element-content class="app-element__body">
-        <span ng-repeat="trophy in trophies" class="app-trophy app-trophy__{{ trophy.css }}"></span>
+        <span ng-repeat="trophy in trophies"
+              ng-click="setTrophy(trophy)"
+              modal="modal-challenger"
+              class="app-trophy__badge app-trophy__badge-{{ trophy.css }} app__clickable"></span>
+    </div>
+</div>
+
+
+<div id="modal-challenger" 
+     class="app-modal app-modal__bg" role="dialog" aria-hidden="true">
+    <div class="app-modal__dialog">
+        <div class="app-modal__content app__text-center">
+            <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy.id + '.title' | translate }}</h3>
+            <span class="app-trophy__badge app-trophy__badge-{{ trophy.css }}"></span>
+            <p>{{ 'trophies.content.' + trophy.id + '.description' | translate }}</p>
+        </div>
     </div>
 </div>
