--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -16,7 +16,8 @@
         </div>
     </div>
     <div class="app-button__create-game">
-        <button show-modal modal="modal-create-game" class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+        <button modal="modal-create-game" 
+                class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
             {{ 'create_game' | translate }}
         </button>
     </div>
@@ -149,7 +150,7 @@
                     <td>
                         <button ng-if="challenger.uid !== user.uid"
                                 ng-click="setChallenger(challenger)"
-                                show-modal modal="modal-challenger"
+                                modal="modal-challenger"
                                 class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-button--colored">
                             <i class="material-icons">check</i>
                         </button>
@@ -194,7 +195,7 @@
                     <td>
                         <button ng-if="friend.uid !== user.uid"
                                 ng-click="setChallenger(friend)"
-                                show-modal modal="modal-challenger"
+                                modal="modal-challenger"
                                 class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon mdl-button--colored">
                             <i class="material-icons">check</i>
                         </button>
