--- a/public/app/game/game.html
+++ b/public/app/game/game.html
@@ -1,7 +1,17 @@
+<div class="app-home__head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div profile-game player="player2"></div>
+</div>
+
+<div class="app-home__head mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div profile-game player="player1"></div>
+</div>
+
+
+
+<!--
 <div class="content no-select">
     <div class="row">
         <div class="col-md-10">
-            <div class="profile profile-game element" profile-game player="player2"></div>
             <div class="notation">
                 <div class="element">
                     <div ng-repeat="notation in player1.notation track by $index">{{ notation }}</div>
@@ -22,7 +32,6 @@
                     </div>
                 </div>
             </div>
-            <div class="profile profile-game element" profile-game player="player1"></div>
         </div>
         <div ng-show="game.finish" class="col-md-2" col-right></div>
     </div>
@@ -31,3 +40,5 @@
 <div modal-promotion class="modal fade" id="modal-promotion"></div>
 <div modal-response-draw class="modal fade" id="modal-response-draw"></div>
 <div modal-finish-game class="modal fade" id="modal-finish-game"></div>
+
+-->
