--- a/public/app/trophies/trophies.html
+++ b/public/app/trophies/trophies.html
@@ -2,7 +2,7 @@
     <div element-content class="app-element__body">
         <span ng-repeat="trophy in trophies"
               ng-click="setTrophy(trophy)"
-              modal="modal-challenger"
+              show-modal="modal-challenger"
               class="app-trophy__badge app-trophy__badge-{{ trophy.css }} app__clickable"></span>
     </div>
 </div>
