bind title after load

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
         <base href="/">
         
-        <title>{{ 'title' | translate }}</title>
+        <title ng-bind="'title'|translate"></title>
 
         <!-- Page styles -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium">
