--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,7 @@
 
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
+        <script src="lib/angular-cookies.min.js"></script>
         <script src="lib/angular-translate.min.js"></script>
         <script src="lib/angular-translate-loader-static-files.min.js"></script>
         <script src="lib/angular-easypiechart.min.js"></script>
