--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         
         <title ng-bind="'title'|translate"></title>
 
+        <link rel="shortcut icon" href="/images/favicon.ico">
+
         <!-- Page styles -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium">
         <link href="css/material/material.min.css" rel="stylesheet">
