--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
                 <a name="top"></a>
                 <div class="app-grid mdl-grid" ng-if="ready" ng-view></div>
                 <footer class="app-footer">
-                    <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ fanpage|translate }}</a>
+                    <a id="fanpage" href="https://www.facebook.com/ChessCommunity" target="_blank">{{ 'fanpage' | translate }}</a>
                 </footer>
             </div>
         </div>
